CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
#PROJECT(frame_test)
INCLUDE_DIRECTORIES(inc)
AUX_SOURCE_DIRECTORY(src ADD_SRC)

ADD_LIBRARY(myadd SHARED ${ADD_SRC})
ADD_LIBRARY(myadd_static STATIC ${ADD_SRC})

SET_TARGET_PROPERTIES(myadd PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(myadd_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

SET_TARGET_PROPERTIES(myadd_static PROPERTIES OUTPUT_NAME "myadd") 

SET(LIBRARY_OUTPUT_PATH ${frame_test_BINARY_DIR}/lib)

MESSAGE(STATUS "PROJECT_BINARY_DIR IS 1PAth:" ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "PROJECT_SOURCE_DIR IS 2PAth:" ${PROJECT_SOURCE_DIR})

MESSAGE(STATUS "frame_test_BINARY_DIR IS 3PAth:" ${frame_test_BINARY_DIR})
MESSAGE(STATUS "frame_test_SOURCE_DIR IS 4PAth:" ${frame_test_SOURCE_DIR})


